--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -30,18 +30,18 @@
 
 // Palette.
 	$palette: (
-		bg:					#242943,
-		bg-alt:				#2a2f4a,
+		bg:					#000000,
+		bg-alt:				#000000,
 		fg:					#ffffff,
 		fg-bold:			#ffffff,
-		fg-light:			rgba(244,244,255,0.2),
-		border:				rgba(212,212,255,0.1),
-		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#9bf1ff,
-		accent1:			#6fc3df,
-		accent2:			#8d82c4,
-		accent3:			#ec8d81,
-		accent4:			#e7b788,
-		accent5:			#8ea9e8,
-		accent6:			#87c5a4
+		fg-light:			#eeeeee,
+		border:				rgba(255,255,255,0.1),
+		border-bg:			rgba(255,255,255,0.035),
+		highlight:			#ffffff,
+		accent1:			#FCC873,
+		accent2:			#FBB13C,
+		accent3:			#B66D0D,
+		accent4:			#F8FFF4,
+		accent5:			#525252,
+		accent6:			#353535
 	);
