--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -35,6 +35,8 @@
 			height: inherit;
 			line-height: inherit;
 			padding: 0 1.5em;
+			display: flex;
+			align-items: center;
 
 			strong, img {
 				@include vendor('transition', (
