--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Work With Me</a></li>
+                    <li><a href="#one" class="button next scrolly">Work With Us</a></li>
                 </ul>
             </div>
         </div>
